--- a/NNms_Security-1/src/main/resources/application.properties
+++ b/NNms_Security-1/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ams
+spring.datasource.url=jdbc:mysql://localhost:3306/nms
 spring.datasource.username=root
-spring.datasource.password=9963101639
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+server.port=8081
 spring.jpa.hibernate.ddl-auto= update
+
+
